--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icon-cloud": "^4.1.7",
     "react-icons": "^5.4.0"
   },
   "devDependencies": {
